syntax = "proto3";

option csharp_namespace = "XTC.FMP.MOD.Assloud.LIB.Proto";
package xtc.fmp.assloud;

// 状态
message Status
{
    int32 code = 1;  // 状态码
    string message = 2;  // 状态信息
}

// 空白请求
message BlankRequest
{
}

// 空白回复
message BlankResponse
{
    Status status = 1;  // 状态
}

// 作用域的请求
message ScopeRequest
{
    string scope = 1;  // 作用域
}

// 作用域的回复
message ScopeResponse
{
    Status status = 1;  // 状态
    string scope = 2;  // 作用域
}

// Uuid的回复
message UuidResponse
{
    Status status = 1;  // 状态
    string uuid = 2;  // 全局唯一识别码
}

message MetaEntity
{
    string format = 1; // 格式
    string uri = 2; // bundle/content格式的短路径
    map<string, string> kv = 3; // 键值对
    string alias = 100; // 别名
    string title = 101; // 主标题
    string caption = 102; // 副标题
    string label = 103; // 标签
    string topic = 104; // 标语
    string description = 105; // 说明描述
    map<string, string> alias_i18n = 200; // 别名的多国语言
    map<string, string> title_i18n = 201; // 主标题的多国语言
    map<string, string> caption_i18n = 202; // 副标题的多国语言
    map<string, string> label_i18n = 203; // 标签的多国语言
    map<string, string> topic_i18n = 204; // 标语的多国语言
    map<string, string> description_i18n = 205; // 说明描述的多国语言
}

message ContentEntity
{
    string path = 1;  // 内容的路径
    string bundle = 2;  // 内容的包名
    string name = 3;  // 内容的名称
    MetaEntity meta = 10;  // 内容的元数据
}
